[package]
name = "castbox"
version = "0.0.10"
authors = ["sh1zen dev.sh1zen@outlook.it"]
edition = "2024"
description = "A Runtime-Typed Reference-Counted Smart Pointer and Concurrent Programming tools."
license = "Apache-2.0"
repository = "https://github.com/sh1zen/castbox"
documentation = "https://docs.rs/castbox"
readme = "README.md"
keywords = ["lock-free", "dyn-any", "thread-safe", "reference-counted", "atomic"]
categories = ["data-structures", "concurrency", "memory-management", "development-tools"]
exclude = [".gitignore", ".github/*"]
homepage = "https://github.com/sh1zen/castbox"

[lib]
name = "castbox"
path = "src/lib.rs"